[package]
name = "docker-fetch"
version = "0.1.0"
edition = "2021"

description = "A docker previewer for fzf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/docker-fetch"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
colorize = "0.1.0"
figlet-rs = "0.1.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
